kubernetes/kube-system/secrets-store-csi-driver/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: kube-system
  name: secrets-store-csi-driver-policy
specs:
  # default
  - endpointSelector: &self
      matchLabels:
        app.kubernetes.io/name: secrets-store-csi-driver
    ingress:
      - {}
    egress:
      - {}
  # allow connection to kube-api server
  - endpointSelector: *self
    egress:
      - toEntities: [kube-apiserver]
        toPorts:
          - ports:
              - protocol: TCP
                port: "6443"
